# termim

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  check_out.txt  package-lock.json  ps_methods.txt  termim_v1.0.3_findings.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: latency_benchmarks.rs
docs/: audit_notes.md  community.css  community.html  devto_update_post.md  docs.css  docs.js  documentation.html  index.html  script.js  styles.css
installer/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
installer/homebrew/: termim.rb
shell/: bash.sh  fish.fish  powershell.ps1  zsh.sh
src/: lib.rs  main.rs
src/cli/: args.rs  handlers.rs
src/core/: fundamentals.rs  history.rs  intelligence.rs  mod.rs  project.rs
src/utils/: constants.rs  mod.rs  update.rs
tmp/: floor.rs
