[package]
name = "termim"
version = "1.0.9"
edition = "2021"
description = "Project-aware terminal history and command intelligence"
repository = "https://github.com/akhtarx/termim"
license = "MIT"
keywords = ["terminal", "history", "productivity", "shell", "intelligence"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
sha2 = "0.10"
fd-lock = "4.0"
tempfile = "3.8"
regex = "1.10"
ureq = "2.9"
once_cell = "1.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.51"

[[bin]]
name = "termim"
path = "src/main.rs"

