[package]
name = "termim"
version = "1.1.5"
edition = "2021"
description = "Directory & Context-aware terminal history and command intelligence"
repository = "https://github.com/akhtarx/termim"
license = "MIT"
keywords = ["terminal", "history", "productivity", "shell", "intelligence"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://github.com/akhtarx/termim"



[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
sha2 = "0.10"
fd-lock = "4.0"
tempfile = "3.8"
regex = "1.10"
ureq = { version = "2.9", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.51"

[features]
default = []
update-check = ["dep:ureq"]

[[bin]]
name = "termim"
path = "src/main.rs"

